# inspire_tutorials

./: CMakeLists.txt  README.md  inspire_tutorials.repos  package.xml  setup.cfg
.github/: upstream.jazzy.repos
.github/workflows/: industrial_ci.yml
config/: inspire_hand_controllers.yaml
inspire_tutorials/: __init__.py  hand_mapping.py  trajectory.py
launch/: real.launch.py  sim.launch.py
rviz/: inspire_hand_teleop.rviz
scripts/: inspire_hand_command  inspire_hand_teleop  rtsp_image_publisher  video_file_image_publisher
src/inspire_tutorials/: g1_task_control_rqt.py  hand_mapping.py  urdf_builder.py
test/: test_hand_mapping.py  test_package_contracts.py  test_urdf_builder.py
test_data/: closed_fist_landmarks.json  open_palm_landmarks.json  video_fist_landmarks.json
